# game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/core/: camera.h  core.h  decoration.h  load.h  npc.h  player.h  transform.h  world.h
include/core/input/: input.h
include/core/physics/: physics.h
include/core/render/: light.h  render.h
shaders/: buffer.frag  buffer.vert  lighting.frag  texture.frag  texture.vert
src/: main.cc
src/core/: core.cc  decoration.cc  load.cc  npc.cc  world.cc
src/core/input/: input.cc
src/core/physics/: physics.cc
src/core/render/: render.cc
test_assets/: background.xcf  player.xcf
