cmake_minimum_required(VERSION 3.21)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
project(Game)
file(GLOB_RECURSE SOURCES "src/*.c" "src/*.cc")

find_package(glfw3 CONFIG REQUIRED)
find_package(OpenGL REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(Freetype CONFIG REQUIRED)
find_package(box2d CONFIG REQUIRED)
find_package(Stb REQUIRED)
find_package(pugixml CONFIG REQUIRED)
add_executable(Game ${SOURCES})
target_include_directories(Game PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
target_include_directories(Game PRIVATE ${Stb_INCLUDE_DIR})
target_link_libraries(Game PRIVATE glfw)
target_link_libraries(Game PRIVATE OpenGL::GL)
target_link_libraries(Game PRIVATE glad::glad)
target_link_libraries(Game PRIVATE glm::glm)
target_link_libraries(Game PRIVATE fmt::fmt)
target_link_libraries(Game PRIVATE Freetype::Freetype)
target_link_libraries(Game PRIVATE box2d::box2d)
target_link_libraries(Game PRIVATE pugixml::static)
